# rust-rocket

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
dyn_templates/: Cargo.toml
